Figure: enhance font-size of description on small screens (Fixes #17)

--- a/static/styles/components/figure.scss
+++ b/static/styles/components/figure.scss
@@ -110,7 +110,7 @@
   &__description {
     color: $color-blue;
     font-family: $font-value-family;
-    font-size: 1.4rem;
+    font-size: 1.2rem;
     line-height: 1.5;
     margin-bottom: 0;
     margin-top: 0;
