--- a/static/styles/components/paragraph.scss
+++ b/static/styles/components/paragraph.scss
@@ -1,7 +1,7 @@
 .paragraph {
   color: $color-blue;
   font-family: $font-value-family;
-  font-size: 1.6rem;
+  font-size: 1.65rem;
   font-weight: 400;
   line-height: 1.5;
 
